# gml2step

./: .gitignore  AGENTS.md  NOTICE  README.ja.md  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy-docs.yml  publish.yml
docs/: astro.config.mjs  package-lock.json
docs/public/: index.html  llms-full.txt  llms.txt  robots.txt
docs/src/content/docs/en/: api.md  architecture.md  cli.md  configuration.md  conversion.md  development.md  index.mdx  installation.md  plateau.md
docs/src/content/docs/ja/: api.md  architecture.md  cli.md  configuration.md  conversion.md  development.md  index.mdx  installation.md  plateau.md
docs/src/styles/: custom.css
src/gml2step/: api.py
src/gml2step/citygml/geometry/: builders.py  face_fixer.py  shell_builder.py  solid_builder.py
src/gml2step/citygml/streaming/: coordinate_optimizer.py
tests/: conftest.py  test_api_client.py  test_bounded_by.py  test_cli.py  test_constants.py  test_coordinate_optimizer.py  test_coordinate_utils.py  test_coordinates.py  test_fetcher_utils.py  test_footprint_extractor.py  test_logging.py  test_mesh_mapping.py  test_mesh_utils.py  test_recentering.py  test_streaming.py  test_tolerance.py  test_transformers.py  test_triangulate.py  test_types.py  test_xlink.py  test_xml_utils.py
